small fix: background image in intro div of index.html
Background image wasn't covering the whole background on screen widths bigger than 1380 pixels.
This fix is consistent with style used in other pages.

--- a/css/estudando.css
+++ b/css/estudando.css
@@ -111,6 +111,7 @@ body {
     background: url(../img/intro5.jpg) no-repeat;
     text-align: center;
     padding: 60px;
+    background-size: cover;
 }
 
 main div h1 {
